MiniCompilador/target/generated-sources/antlr4/com/MiniCompilador/EclangParser.java
// Generated from com/MiniCompilador/Eclang.g4 by ANTLR 4.5.1
package com.MiniCompilador;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class EclangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PL_INICIO=1, PL_VAR=2, PL_CON_S=3, PL_CON_E=4, PL_IF=5, PL_ELSE_IF=6, 
		PL_ELSE=7, PL_SELECCIONADOR=8, PL_ALTER=9, PL_END=10, PL_PRE=11, PL_WHILE=12, 
		PL_FOR=13, PL_CARGO=14, PL_AND=15, PL_OR=16, SIM_OPERACION=17, SIM_NEGACION=18, 
		SIM_DE_COMPA=19, SIMBOLO_ASIGN=20, SIMBOLO_DO=21, PA_A=22, PA_C=23, COR_A=24, 
		CORC_C=25, LL_A=26, LL_C=27, PUN_COMA=28, COMA=29, RETORNO=30, COMILLAS=31, 
		IDENTIFICADOR=32, TEXTO=33, NUMERO=34, WS=35;
	public static final int
		RULE_start = 0, RULE_sentencia = 1, RULE_v_asignacion = 2, RULE_v_asignacion_valor_numero = 3, 
		RULE_v_asignacion_valor_texto = 4, RULE_c_s_texto = 5, RULE_c_s_variable = 6, 
		RULE_c_s_combinado = 7, RULE_c_e_nuevo = 8, RULE_c_e_viejo = 9, RULE_if_unitario = 10, 
		RULE_if_else = 11, RULE_if_elseif = 12, RULE_elseif = 13, RULE_seleccionador = 14, 
		RULE_alter = 15, RULE_alter_texto = 16, RULE_alter_numero = 17, RULE_ciclo_while = 18, 
		RULE_ciclo_for = 19, RULE_rango = 20, RULE_rango_numero = 21, RULE_rango_v_iz = 22, 
		RULE_rango_v_de = 23, RULE_rango_v = 24, RULE_cargos = 25, RULE_cargo_nr_vacio = 26, 
		RULE_cargo_nr_variables = 27, RULE_cargo_sr_vacio = 28, RULE_cargo_sr_variables = 29, 
		RULE_rtr = 30, RULE_vrt = 31, RULE_condicion = 32, RULE_c_normal = 33, 
		RULE_c_normal_and = 34, RULE_c_normal_or = 35, RULE_c_texto = 36, RULE_c_texto_iz = 37, 
		RULE_c_texto_de = 38, RULE_c_num_iz = 39, RULE_c_num_de = 40;
	public static final String[] ruleNames = {
		"start", "sentencia", "v_asignacion", "v_asignacion_valor_numero", "v_asignacion_valor_texto", 
		"c_s_texto", "c_s_variable", "c_s_combinado", "c_e_nuevo", "c_e_viejo", 
		"if_unitario", "if_else", "if_elseif", "elseif", "seleccionador", "alter", 
		"alter_texto", "alter_numero", "ciclo_while", "ciclo_for", "rango", "rango_numero", 
		"rango_v_iz", "rango_v_de", "rango_v", "cargos", "cargo_nr_vacio", "cargo_nr_variables", 
		"cargo_sr_vacio", "cargo_sr_variables", "rtr", "vrt", "condicion", "c_normal", 
		"c_normal_and", "c_normal_or", "c_texto", "c_texto_iz", "c_texto_de", 
		"c_num_iz", "c_num_de"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'Class'", "'Var'", "'Console.s'", "'Console.e'", "'if'", "'else if'", 
		"'else'", "'Seleccionador'", "'Alter'", "'end'", "'Pre'", "'While'", "'For'", 
		"'Cargo'", "'AND'", "'OR'", null, "'!'", null, "'='", "'$'", "'('", "')'", 
		"'['", "']'", "'{'", "'}'", "';'", "','", "'->'", "'\"'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "PL_INICIO", "PL_VAR", "PL_CON_S", "PL_CON_E", "PL_IF", "PL_ELSE_IF", 
		"PL_ELSE", "PL_SELECCIONADOR", "PL_ALTER", "PL_END", "PL_PRE", "PL_WHILE", 
		"PL_FOR", "PL_CARGO", "PL_AND", "PL_OR", "SIM_OPERACION", "SIM_NEGACION", 
		"SIM_DE_COMPA", "SIMBOLO_ASIGN", "SIMBOLO_DO", "PA_A", "PA_C", "COR_A", 
		"CORC_C", "LL_A", "LL_C", "PUN_COMA", "COMA", "RETORNO", "COMILLAS", "IDENTIFICADOR", 
		"TEXTO", "NUMERO", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Eclang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EclangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public TerminalNode PL_INICIO() { return getToken(EclangParser.PL_INICIO, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(EclangParser.IDENTIFICADOR, 0); }
		public TerminalNode LL_A() { return getToken(EclangParser.LL_A, 0); }
		public TerminalNode LL_C() { return getToken(EclangParser.LL_C, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclangListener ) ((EclangListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclangListener ) ((EclangListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EclangVisitor ) return ((EclangVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(PL_INICIO);
			setState(83);
			match(IDENTIFICADOR);
			setState(84);
			match(LL_A);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PL_VAR) | (1L << PL_CON_S) | (1L << PL_IF) | (1L << PL_SELECCIONADOR) | (1L << PL_WHILE) | (1L << PL_FOR) | (1L << PL_CARGO) | (1L << IDENTIFICADOR))) != 0)) {
				{
				{
				setState(85);
				sentencia();
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91);
			match(LL_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciaContext extends ParserRuleContext {
		public V_asignacionContext v_asignacion() {
			return getRuleContext(V_asignacionContext.class,0);
		}
		public V_asignacion_valor_numeroContext v_asignacion_valor_numero() {
			return getRuleContext(V_asignacion_valor_numeroContext.class,0);
		}
		public V_asignacion_valor_textoContext v_asignacion_valor_texto() {
			return getRuleContext(V_asignacion_valor_textoContext.class,0);
		}
		public C_s_textoContext c_s_texto() {
			return getRuleContext(C_s_textoContext.class,0);
		}
		public C_s_variableContext c_s_variable() {
			return getRuleContext(C_s_variableContext.class,0);
		}
		public C_s_combinadoContext c_s_combinado() {
			return getRuleContext(C_s_combinadoContext.class,0);
		}
		public C_e_nuevoContext c_e_nuevo() {
			return getRuleContext(C_e_nuevoContext.class,0);
		}
		public C_e_viejoContext c_e_viejo() {
			return getRuleContext(C_e_viejoContext.class,0);
		}
		public If_unitarioContext if_unitario() {
			return getRuleContext(If_unitarioContext.class,0);
		}
		public If_elseContext if_else() {
			return getRuleContext(If_elseContext.class,0);
		}
		public If_elseifContext if_elseif() {
			return getRuleContext(If_elseifContext.class,0);
		}
		public SeleccionadorContext seleccionador() {
			return getRuleContext(SeleccionadorContext.class,0);
		}
		public Ciclo_whileContext ciclo_while() {
			return getRuleContext(Ciclo_whileContext.class,0);
		}
		public Ciclo_forContext ciclo_for() {
			return getRuleContext(Ciclo_forContext.class,0);
		}
		public CargosContext cargos() {
			return getRuleContext(CargosContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclangListener ) ((EclangListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclangListener ) ((EclangListener)listener).exitSentencia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EclangVisitor ) return ((EclangVisitor<? extends T>)visitor).visitSentencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentencia);
		try {
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				v_asignacion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				v_asignacion_valor_numero();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(95);
				v_asignacion_valor_texto();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(96);
				c_s_texto();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(97);
				c_s_variable();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(98);
				c_s_combinado();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(99);
				c_e_nuevo();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(100);
				c_e_viejo();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(101);
				if_unitario();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(102);
				if_else();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(103);
				if_elseif();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(104);
				seleccionador();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(105);
				ciclo_while();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(106);
				ciclo_for();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(107);
				cargos();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class V_asignacionContext extends ParserRuleContext {
		public TerminalNode PL_VAR() { return getToken(EclangParser.PL_VAR, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(EclangParser.IDENTIFICADOR, 0); }
		public TerminalNode PUN_COMA() { return getToken(EclangParser.PUN_COMA, 0); }
		public V_asignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclangListener ) ((EclangListener)listener).enterV_asignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclangListener ) ((EclangListener)listener).exitV_asignacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EclangVisitor ) return ((EclangVisitor<? extends T>)visitor).visitV_asignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final V_asignacionContext v_asignacion() throws RecognitionException {
		V_asignacionContext _localctx = new V_asignacionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_v_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(PL_VAR);
			setState(111);
			match(IDENTIFICADOR);
			setState(112);
			match(PUN_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class V_asignacion_valor_numeroContext extends ParserRuleContext {
		public TerminalNode PL_VAR() { return getToken(EclangParser.PL_VAR, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(EclangParser.IDENTIFICADOR, 0); }
		public TerminalNode SIMBOLO_ASIGN() { return getToken(EclangParser.SIMBOLO_ASIGN, 0); }
		public TerminalNode NUMERO() { return getToken(EclangParser.NUMERO, 0); }
		public TerminalNode PUN_COMA() { return getToken(EclangParser.PUN_COMA, 0); }
		public V_asignacion_valor_numeroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v_asignacion_valor_numero; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclangListener ) ((EclangListener)listener).enterV_asignacion_valor_numero(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclangListener ) ((EclangListener)listener).exitV_asignacion_valor_numero(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EclangVisitor ) return ((EclangVisitor<? extends T>)visitor).visitV_asignacion_valor_numero(this);
			else return visitor.visitChildren(this);
		}
	}

	public final V_asignacion_valor_numeroContext v_asignacion_valor_numero() throws RecognitionException {
		V_asignacion_valor_numeroContext _localctx = new V_asignacion_valor_numeroContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_v_asignacion_valor_numero);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(PL_VAR);
			setState(115);
			match(IDENTIFICADOR);
			setState(116);
			match(SIMBOLO_ASIGN);
			setState(117);
			match(NUMERO);
			setState(118);
			match(PUN_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class V_asignacion_valor_textoContext extends ParserRuleContext {
		public TerminalNode PL_VAR() { return getToken(EclangParser.PL_VAR, 0); }
		public List<TerminalNode> IDENTIFICADOR() { return getTokens(EclangParser.IDENTIFICADOR); }
		public TerminalNode IDENTIFICADOR(int i) {
			return getToken(EclangParser.IDENTIFICADOR, i);
		}
		public TerminalNode SIMBOLO_ASIGN() { return getToken(EclangParser.SIMBOLO_ASIGN, 0); }
		public List<TerminalNode> COMILLAS() { return getTokens(EclangParser.COMILLAS); }
		public TerminalNode COMILLAS(int i) {
			return getToken(EclangParser.COMILLAS, i);
		}
		public TerminalNode PUN_COMA() { return getToken(EclangParser.PUN_COMA, 0); }
		public V_asignacion_valor_textoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v_asignacion_valor_texto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclangListener ) ((EclangListener)listener).enterV_asignacion_valor_texto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclangListener ) ((EclangListener)listener).exitV_asignacion_valor_texto(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EclangVisitor ) return ((EclangVisitor<? extends T>)visitor).visitV_asignacion_valor_texto(this);
			else return visitor.visitChildren(this);
		}
	}

	public final V_asignacion_valor_textoContext v_asignacion_valor_texto() throws RecognitionException {
		V_asignacion_valor_textoContext _localctx = new V_asignacion_valor_textoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_v_asignacion_valor_texto);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(PL_VAR);
			setState(121);
			match(IDENTIFICADOR);
			setState(122);
			match(SIMBOLO_ASIGN);
			setState(123);
			match(COMILLAS);
			setState(124);
			match(IDENTIFICADOR);
			setState(125);
			match(COMILLAS);
			setState(126);
			match(PUN_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class C_s_textoContext extends ParserRuleContext {
		public TerminalNode PL_CON_S() { return getToken(EclangParser.PL_CON_S, 0); }
		public TerminalNode COR_A() { return getToken(EclangParser.COR_A, 0); }
		public List<TerminalNode> COMILLAS() { return getTokens(EclangParser.COMILLAS); }
		public TerminalNode COMILLAS(int i) {
			return getToken(EclangParser.COMILLAS, i);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(EclangParser.IDENTIFICADOR, 0); }
		public TerminalNode CORC_C() { return getToken(EclangParser.CORC_C, 0); }
		public TerminalNode PUN_COMA() { return getToken(EclangParser.PUN_COMA, 0); }
		public C_s_textoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c_s_texto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclangListener ) ((EclangListener)listener).enterC_s_texto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclangListener ) ((EclangListener)listener).exitC_s_texto(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EclangVisitor ) return ((EclangVisitor<? extends T>)visitor).visitC_s_texto(this);
			else return visitor.visitChildren(this);
		}
	}

	public final C_s_textoContext c_s_texto() throws RecognitionException {
		C_s_textoContext _localctx = new C_s_textoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_c_s_texto);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(PL_CON_S);
			setState(129);
			match(COR_A);
			setState(130);
			match(COMILLAS);
			setState(131);
			match(IDENTIFICADOR);
			setState(132);
			match(COMILLAS);
			setState(133);
			match(CORC_C);
			setState(134);
			match(PUN_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class C_s_variableContext extends ParserRuleContext {
		public TerminalNode PL_CON_S() { return getToken(EclangParser.PL_CON_S, 0); }
		public TerminalNode COR_A() { return getToken(EclangParser.COR_A, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(EclangParser.IDENTIFICADOR, 0); }
		public TerminalNode CORC_C() { return getToken(EclangParser.CORC_C, 0); }
		public TerminalNode PUN_COMA() { return getToken(EclangParser.PUN_COMA, 0); }
		public C_s_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c_s_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclangListener ) ((EclangListener)listener).enterC_s_variable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclangListener ) ((EclangListener)listener).exitC_s_variable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EclangVisitor ) return ((EclangVisitor<? extends T>)visitor).visitC_s_variable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final C_s_variableContext c_s_variable() throws RecognitionException {
		C_s_variableContext _localctx = new C_s_variableContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_c_s_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(PL_CON_S);
			setState(137);
			match(COR_A);
			setState(138);
			match(IDENTIFICADOR);
			setState(139);
			match(CORC_C);
			setState(140);
			match(PUN_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class C_s_combinadoContext extends ParserRuleContext {
		public TerminalNode PL_CON_S() { return getToken(EclangParser.PL_CON_S, 0); }
		public TerminalNode COR_A() { return getToken(EclangParser.COR_A, 0); }
		public List<TerminalNode> COMILLAS() { return getTokens(EclangParser.COMILLAS); }
		public TerminalNode COMILLAS(int i) {
			return getToken(EclangParser.COMILLAS, i);
		}
		public List<TerminalNode> IDENTIFICADOR() { return getTokens(EclangParser.IDENTIFICADOR); }
		public TerminalNode IDENTIFICADOR(int i) {
			return getToken(EclangParser.IDENTIFICADOR, i);
		}
		public TerminalNode SIMBOLO_DO() { return getToken(EclangParser.SIMBOLO_DO, 0); }
		public TerminalNode CORC_C() { return getToken(EclangParser.CORC_C, 0); }
		public TerminalNode PUN_COMA() { return getToken(EclangParser.PUN_COMA, 0); }
		public C_s_combinadoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c_s_combinado; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclangListener ) ((EclangListener)listener).enterC_s_combinado(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclangListener ) ((EclangListener)listener).exitC_s_combinado(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EclangVisitor ) return ((EclangVisitor<? extends T>)visitor).visitC_s_combinado(this);
			else return visitor.visitChildren(this);
		}
	}

	public final C_s_combinadoContext c_s_combinado() throws RecognitionException {
		C_s_combinadoContext _localctx = new C_s_combinadoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_c_s_combinado);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(PL_CON_S);
			setState(143);
			match(COR_A);
			setState(144);
			match(COMILLAS);
			setState(145);
			match(IDENTIFICADOR);
			setState(146);
			match(COMILLAS);
			setState(147);
			match(SIMBOLO_DO);
			setState(148);
			match(IDENTIFICADOR);
			setState(149);
			match(CORC_C);
			setState(150);
			match(PUN_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
